src/ui/readarr_ui/blocklist/snapshots/managarr__ui__readarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_second_item_selected_Blocklist.snap
---
source: src/ui/readarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Author Name                                  Source Title                                                       Quality               Date                        
   First Author                                 First Source Title                                                 EPUB                  2023-05-20 21:29:16 UTC     
=> Second Author                                Second Source Title                                                MOBI                  2024-08-14 09:03:47 UTC
