src/ui/readarr_ui/blocklist/snapshots/managarr__ui__readarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__blocklist_tab_Blocklist.snap
---
source: src/ui/readarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Author Name ▼                                Source Title                                                       Quality               Date                        
=> Test Author                                  Test Source Title                                                  EPUB                  2023-05-20 21:29:16 UTC
